# RL_Chaos

./: .gitattributes  .gitignore  COLAB_COMPLETE_GUIDE.md  ChaosOps_Training_Colab.ipynb  Dockerfile  HF_GPU_TRAINING.md  QUICK_START.md  README.md  README_COLAB_GUIDE.md  README_TEST.md  START_HERE.md  app.py  pyproject.toml  readme.md  requirements.txt  testtrain.py  train.py  train_grpo.py
.githooks/: auto_push.ps1  auto_push.sh  post-commit  post-commit.bat  post-merge
chaosops/: Dockerfile  app.py  env.py  eval.py  openenv.yaml  requirements.txt  train.py
chaosops-tiny-grpo/: config.json  generation_config.json  model.safetensors  tokenizer.json  train_metrics.json
chaosops/tasks/: task1.py  task2.py  task3.py
charts/: learning_proof.json
curriculum/: __init__.py
envs/: __init__.py  base.py  multi_service_env.py
envs/models/: __init__.py  service.py  system_graph.py
evaluation/: __init__.py  eval_script.py  metrics.py  robustness_eval.py
failures/: __init__.py  failure_types.py  injector.py
results/: hackathon.avif  metrics.json
reward/: __init__.py  anti_cheat.py  reward_function.py
scripts/: prove_learning.py  publish_hf_space.ps1  setup_auto_push.ps1  train_and_upload_hf.py
training/: __init__.py  train_script.py  trainer.py  utils.py
